--- a/index.css
+++ b/index.css
@@ -97,3 +97,17 @@ img {
     max-width:70vw;
     border-radius:30px;
 }
+
+@media screen and (max-width: 700px) {
+
+    h2 {
+      font-size:26px !important;
+      line-height:28px !important;
+    }
+
+    ul:nth-of-type(2) {
+      flex-flow:column;
+      line-height:24px;
+    }
+    
+}
