--- a/index.css
+++ b/index.css
@@ -109,5 +109,17 @@ img {
       flex-flow:column;
       line-height:24px;
     }
+   
+    .flexcontainer {
+      margin:40px 40px 100px 40px;
+    }
+    
+    .flexcontainer ul:nth-of-type(2) li {
+       margin-bottom: 5px;
+    }
+    
+    .flexcontainer ul li {
+      margin: 18px 10px;
+    }
     
 }
