--- a/index.css
+++ b/index.css
@@ -114,8 +114,12 @@ img {
       margin:40px 40px 100px 40px;
     }
     
+    .flexcontainer ul {
+        flex-flow:column;
+    }
+    
     .flexcontainer ul:nth-of-type(2) li {
-       margin-bottom: 5px;
+       margin: 5px 20px;
     }
     
     .flexcontainer ul li {
